--- a/app/views/static_pages/schedule.html.erb
+++ b/app/views/static_pages/schedule.html.erb
@@ -4,7 +4,7 @@
 
     <h4>Quint State will be held Feb 26th to 28th 2015. A full schedule will be available February 1, 2015.</h4>
 
-    <p>Listed below is an outline of the conference schedule. You may also download a printable version <%= link_to 'download a printable version here', static_pages_download_url %>.</p>
+    <p>Listed below is an outline of the conference schedule. You may also <%= link_to 'download a printable version here', static_pages_download_url %>.</p>
 
     <hr />
 
@@ -16,7 +16,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">Welcome Social Event</h4>
-                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B056'49.3%22N+83%C2%B022'32.7%22W/@33.947018,-83.375751,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0">Dawson Hall, Room 116</a></p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B056'49.3%22N+83%C2%B022'32.7%22W/@33.947018,-83.375751,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Dawson Hall, Room 116</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 6:00pm - 8:00pm</small></p>
                 </div>
                 <div class="timeline-body">
@@ -35,7 +35,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">Breakfast and Registration</h4>
-                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 482</p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 482</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 8:00am - 9:00am</small></p>
                 </div>
                 <div class="timeline-body">
@@ -49,7 +49,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">Welcome and Introduction.</h4>
-                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 482</p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 480</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 9:30am - 10:00am</small></p>
                 </div>
                 <div class="timeline-body">
@@ -67,10 +67,11 @@
                 <div class="timeline-heading">
                   <h4 class="timeline-title"><em>The Impact of Foster Parenting on Foster Parents’ Relationship Quality</em></h4>
                   <h5><small>Speaker: </small>Evin Winkelman Richardson</h5>
-                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 482</p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 482</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 10:05am - 10:35am</small></p>
                 </div>
                 <div class="timeline-body">
+                Round Table Presentation
                 </div>
               </div>
             </li>
@@ -81,11 +82,11 @@
                 <div class="timeline-heading">
                   <h4 class="timeline-title"><em>Change in Dating Violence Acceptability as Predicted by Change in Gender Role Attitudes for Males and Females Following Relationship Education</em></h4>
                   <h5><small>Speaker: </small>Rachel Savasuk</h5>
-                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 480</p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 480</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 10:05am - 10:35am</small></p>
                 </div>
                 <div class="timeline-body">
-
+                Paper Presentation
                 </div>
               </div>
             </li>
@@ -100,10 +101,11 @@
                 <div class="timeline-heading">
                   <h4 class="timeline-title"><em>Gay Father Families: Kinship and Help-Seeking Behavior</em></h4>
                   <h5><small>Speaker: </small>Emma Potter</h5>
-                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 482</p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 482</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 11:30am - 12:05pm</small></p>
                 </div>
                 <div class="timeline-body">
+                Round Table Presentation
                 </div>
               </div>
             </li>
@@ -114,28 +116,30 @@
                 <div class="timeline-heading">
                   <h4 class="timeline-title"><em>Messages from the Milieu: Classroom Instruction and Context Influences on Elementary School Students’ Academic Self-Regulation</em></h4>
                   <h5><small>Speaker: </small>Lisa Connor</h5>
-                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 480</p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 480</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 11:30am - 12:05pm</small></p>
                 </div>
                 <div class="timeline-body">
-
+                Paper Presentation
                 </div>
               </div>
             </li>
 
             <li><h3>Lunch and the Future of Quint State (12:05pm - 1:00pm)</h3><small>Tate Center, Room 480</small></li>
 
+
+            <li><h3>Keynote and Professional Development (1:00pm - 3:00pm)</h3><small>Tate Center, Room 480</small></li>
             <li>
               <div class="timeline-badge info"><i class="fa fa-comment-o"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4 class="timeline-title"><em>Mixed Methods Research: Controversies and Considerations</em></h4>
                   <h5><small>Speaker: </small>Dr. Jori Hall</h5>
-                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 480</p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 480</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 1:00pm – 2:00pm</small></p>
                 </div>
                 <div class="timeline-body">
-
+                Keynote
                 </div>
               </div>
             </li>
@@ -146,8 +150,25 @@
                 <div class="timeline-heading">
                   <h4 class="timeline-title"><em>Learning to Teach and Teaching to Learn</em></h4>
                   <h5><small>Speaker: </small>Dr. Melissa Kozak</h5>
-                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 480</p>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 480</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 2:15pm – 3:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+                Professional Development
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Paper Presentation / Round Table #3 (3:15pm - 3:45pm)</h3><small>Tate Center</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>A Developmental and Relational Perspective on Marital Closeness in Older Adulthood</em></h4>
+                  <h5><small>Speaker: </small>Leah Albers</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 480</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:15pm – 3:45pm</small></p>
                 </div>
                 <div class="timeline-body">
 
@@ -155,6 +176,37 @@
               </div>
             </li>
 
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Fathers and mothers play unique roles in the intergenerational continuity of socioeconomic status</em></h4>
+                  <h5><small>Speaker: </small>Alexander Chan & Rebecca Goodman</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 482</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:15pm – 3:45pm</small></p>
+                </div>
+                <div class="timeline-body">
+
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>What are the Needs of Queer International Students?</em></h4>
+                  <h5><small>Speaker: </small>Hoa Nguyen</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 472</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:15pm – 3:45pm</small></p>
+                </div>
+                <div class="timeline-body">
+
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Paper Presentation / Round Table #4 (3:50pm - 4:20pm)</h3><small>Tate Center</small></li>
 
             <hr />
             <!-- End Friday -->
