Add rest of schedule page to the html section

--- a/app/views/static_pages/schedule.html.erb
+++ b/app/views/static_pages/schedule.html.erb
@@ -10,7 +10,7 @@
 
     <div class="container">
         <ul class="timeline">
-            <li><h2>Thursday February 27th, 2015</h2><small>Dawson Hall</small></li>
+            <li><h2>Thursday February 26th, 2015</h2><small>Dawson Hall</small></li>
             <li>
               <div class="timeline-badge"><i class="fa fa-users"></i></div>
               <div class="timeline-panel">
@@ -28,7 +28,7 @@
 
             <hr />
             <!-- End Thursday -->
-            <li><h2>Friday Februrary 28th, 2015</h2><small>Tate Center</small></li>
+            <li><h2>Friday Februrary 27th, 2015</h2><small>Tate Center</small></li>
 
             <li>
               <div class="timeline-badge info"><i class="fa fa-coffee"></i></div>
@@ -171,7 +171,7 @@
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:15pm – 3:45pm</small></p>
                 </div>
                 <div class="timeline-body">
-
+                Paper Presentation
                 </div>
               </div>
             </li>
@@ -186,7 +186,7 @@
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:15pm – 3:45pm</small></p>
                 </div>
                 <div class="timeline-body">
-
+                Paper Presentation
                 </div>
               </div>
             </li>
@@ -201,16 +201,278 @@
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:15pm – 3:45pm</small></p>
                 </div>
                 <div class="timeline-body">
-
+                Round Table
                 </div>
               </div>
             </li>
 
             <li><h3>Paper Presentation / Round Table #4 (3:50pm - 4:20pm)</h3><small>Tate Center</small></li>
 
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Families of Children with Autism: The Association Between Maternal Stress and Sibling Relationship Quality</em></h4>
+                  <h5><small>Speaker: </small>Shaquinta Richardson</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 472</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:50pm - 4:20pm</small></p>
+                </div>
+                <div class="timeline-body">
+                Round Table Presentation
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Me Before You or You Before Me? Relational Predictors of Compassionate Love in Older Couples</em></h4>
+                  <h5><small>Speaker: </small>Allen K. Sabey &amp; Amy J. Rauer</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 480</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:50pm - 4:20pm</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Integrating Sex Education with Relationship Education: Is there Added Value?</em></h4>
+                  <h5><small>Speaker: </small>Taylor Adams & Jeneé Duncan</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 482</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:50pm - 4:20pm</small></p>
+                </div>
+                <div class="timeline-body">
+                Round Table Presentation
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Paper Presentation #5 (4:30pm – 5:00pm)</h3><small>Tate Center</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Challenges and Benefits of Growing Older as a Sexual Minority Adult</em></h4>
+                  <h5><small>Speaker: </small>Erin S. Lavender-Stott</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 480</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 4:30pm – 5:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Empirical Status of Family-Based Treatment Modalities for Adolescents with Substance Use Disorders: A Methodological Review</em></h4>
+                  <h5><small>Speaker: </small>Yesim Keskin</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 482</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 4:30pm – 5:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Methods matter: Exposing the influence of class context through multilevel modeling in evaluation research</em></h4>
+                  <h5><small>Speaker: </small>Sandy U. Morrison</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 472</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 3:50pm - 4:20pm</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li><h2>Walk to Dawnson Hall (5:00pm - 5:30pm)</h2></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-cutlery"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Dinner</h4>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B056'49.3%22N+83%C2%B022'32.7%22W/@33.947018,-83.375751,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Dawnson Hall, Room 116</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 5:30pm – 7:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p></p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-glass"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Student/Faculty Social</h4>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/312+E+Broad+St,+The+University+of+Georgia,+Athens,+GA+30601/@33.957617,-83.3740728,17z/data=!3m1!4b1!4m2!3m1!1s0x88f66cdea59217eb:0xb877d52c889ff751" target="_blank">Magnolias (Upstairs) – 312 East Broad Street, Athens, GA 30601</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 7:00pm – 9:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p></p>
+                </div>
+              </div>
+            </li>
+
             <hr />
             <!-- End Friday -->
-            <li><h2>Saturday Februrary 28th, 2014</h2><small>Another Building</small></li>
+            <li><h2>Saturday February 28th, 2015</h2><small>Tate Center</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-coffee"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Breakfast</h4>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 137</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 9:00am - 10:00am</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p></p>
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Paper Presentation #6 (10:00am - 10:30am)</h3><small>Tate Center</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Concerns about Father Absence and the Value of Relationship Education to Child Welfare Professionals</em></h4>
+                  <h5><small>Speaker: </small>Jacquelyn Mallette</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 137</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 10:00am - 10:30am</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Queering the Family: Consensual Non-Monogamy and the Family</em></h4>
+                  <h5><small>Speaker: </small>Erin S. Lavender-Stott</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 141</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 10:00am - 10:30am</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Paper Presentation / Round Table #7 (10:35am - 11:05am)</h3><small>Tate Center</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Developing Intentionality as a Researcher</em></h4>
+                  <h5><small>Speaker: </small>Kyle L. Bower &amp; Savannah E. Spivey</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 141</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 10:35am - 11:05am</small></p>
+                </div>
+                <div class="timeline-body">
+                Round Table
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Sexual Possible Selves in Emerging Adulthood</em></h4>
+                  <h5><small>Speaker: </small>Kristin Anders</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 137</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 10:35am - 11:05am</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Coffee Break (11:05am – 11:15am)</h3><small>Tate Center</small></li>
+
+            <li><h3>Paper Presentation #8 (11:15am - 11:45am)</h3><small>Tate Center</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Lived Experiences of Parenting Male Emerging Adults who Game Excessively</em></h4>
+                  <h5><small>Speaker: </small>Haleigh Russell</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 137</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 11:15am - 11:45am</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Exploring the Peer Relationships of Young Adults Exposed to Intimate Partner Violence</em></h4>
+                  <h5><small>Speaker: </small>Kathleen Hlavaty &amp; Megan Haselschwerdt</h5>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 141</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 11:15am - 11:45am</small></p>
+                </div>
+                <div class="timeline-body">
+                Paper Presentation
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Awards and Dismissal (11:45am - 1:00pm)</h3><small>Tate Center</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-trophy"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Awarding of Quint Cup / Presenter Awards</h4>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 137</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 11:45am - 12:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-car"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Snacks &amp; Dismissal</h4>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B057'01.5%22N+83%C2%B022'30.6%22W/@33.950412,-83.375174,18z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">Tate Center, Room 137</a></p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 12:00pm - 1:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+                </div>
+              </div>
+            </li>
 
         </ul>
     </div>
