Fix some typos, Update home page, update sass for homepage links, Fix heading issue on schedule

--- a/app/assets/stylesheets/partials/_home.scss
+++ b/app/assets/stylesheets/partials/_home.scss
@@ -50,3 +50,11 @@ h2 {
         }
     }
 }
+.red-link {
+    color: #fff;
+    border-bottom: 1px solid #fff;
+    &:hover {
+        color: #ddd;
+        text-decoration: none;
+    }
+}
