--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -44,7 +44,7 @@
       </div>
       <div id="collapseThree" class="panel-collapse collapse">
         <div class="panel-body">
-          A: Quint State is a conference for students by students. It is a joint effort between five universities (Auburn, Virginia Tech, University of Georgia,  University of Tennesee, University of North Carolina) since the name Quint State.you Quint State's goal is to allow students to practice professional skills while collaborating with future colleagues. The majority of students come from human development and family studies degrees but any student who is interested is welcome to attend.
+          A: Quint State is a conference for students by students. It is a joint effort between five universities (Auburn, Virginia Tech, University of Georgia, University of Tennesee, University of North Carolina) since the name Quint State. Quint State's goal is to allow students to practice professional skills while collaborating with future colleagues. The majority of students come from human development and family studies degrees but any student who is interested is welcome to attend.
         </div>
       </div>
     </div>
