--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,8 +12,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">Are you ready to get involved?</h2>
-        <p>At this time Quint State registration is closed. If you have any questions please send us a message through our contact form. An official schedule for the conference will be available February 1, 2015.</p>
+        <h2 class="text-center">It's time to get involved.</h2>
+        <p>Welcome all visiting schools to the Quint State conference. The schedule for the weekend is up-to-date and can be found <%= link_to 'here', schedule_path, class: 'red-link' %>. For any questions please check the FAQ section or contact us at quintstateuga@gmail.com. </p>
       </div>
     </div>
   </div>
