--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2 class="text-center">It's time to get involved.</h2>
-        <p>Welcome all visiting schools to the Quint State conference. The schedule for the weekend is up-to-date and can be found <%= link_to 'here', schedule_path, class: 'red-link' %>. For any questions please check the FAQ section or contact us at quintstateuga@gmail.com. </p>
+        <p>Welcome all visiting schools to the 39th Annual Quint State conference. The schedule for the weekend is up-to-date and can be found <%= link_to 'here', schedule_path, class: 'red-link' %>. For any questions please check the FAQ section or contact us at quintstateuga@gmail.com. </p>
       </div>
     </div>
   </div>
